--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@ button{padding:10px 30px;font-size:16px;font-weight:bold; cursor:pointer}
 </div>
 
 <script>
-const URL = "https://script.google.com/macros/s/AKfycbxMPYnCW8ZsAnTAUkZFIpZGwvL0jOXwZG5WM28Ef7jvqSlLfMoxOnUVWU8HeGpGMO2Y/exec";
+const URL = "https://script.google.com/macros/s/AKfycbxyLvFIcNlzg5lxxjhBGfuMDFm5NN7RDOn3Sb10JIwatzqJsgy4EzWL-CQ7zM54eWXg/exec
+    ";
 
 // --- CONTROLE DE SESSÃO ---
 window.onload = () => {
@@ -388,6 +389,7 @@ function limparFormulario(){
 </script>
 </body>
 </html>
+
 
 
 
