--- a/index.html
+++ b/index.html
@@ -166,8 +166,7 @@ button{padding:10px 30px;font-size:16px;font-weight:bold; cursor:pointer}
 </div>
 
 <script>
-const URL = "https://script.google.com/macros/s/AKfycbxyLvFIcNlzg5lxxjhBGfuMDFm5NN7RDOn3Sb10JIwatzqJsgy4EzWL-CQ7zM54eWXg/exec
-    ";
+const URL = "https://script.google.com/macros/s/AKfycbwIQgmArDjIAwK8-Dbvl0CtzPvA8f6pnwQPv-9DXILcT_q-Ojhpghj8RYJ7h1yZc79A/exec";
 
 // --- CONTROLE DE SESSÃO ---
 window.onload = () => {
@@ -389,6 +388,7 @@ function limparFormulario(){
 </script>
 </body>
 </html>
+
 
 
 
