--- a/index.html
+++ b/index.html
@@ -48,6 +48,14 @@ button{padding:10px 30px;font-size:16px;font-weight:bold; cursor:pointer}
 .texto-interp{text-align:center;font-size:13px;line-height:1.4;}
 .btn-salvar{background:#fc7a00;color:#020202;border:2px solid #000;border-radius:6px;}
 .btn-logout{background:#ff4444; color:#fff; border:2px solid #000; border-radius:6px; font-size: 12px !important; padding: 5px 15px !important;}
+
+footer {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 12px;
+      color: gray;
+    }
+    
 </style>
 </head>
 
@@ -160,6 +168,10 @@ button{padding:10px 30px;font-size:16px;font-weight:bold; cursor:pointer}
     </div>
 </div>
 
+<footer>
+  Sistema de Avaliação - CTG Chama Nativa © 2026 - dúvidas secretaria@ctgchamanativa.com.br
+</footer>
+    
 <script>
 const URL = "https://script.google.com/macros/s/AKfycbyGTgmc9D4AsHy0oUNQesBEReWs_kQ7nENLm4Gg1sF39tMylibc9d-pUeLe0GizI12g/exec";
 
@@ -293,4 +305,5 @@ function limparFormulario() {
 </script>
 </body>
 </html>
+
 
