--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ footer {
       text-align: center;
       margin-top: 20px;
       font-size: 12px;
-      color: gray;
+      color: rgb(0, 0, 0);
     }
     
 </style>
@@ -305,5 +305,6 @@ function limparFormulario() {
 </script>
 </body>
 </html>
+
 
 
